--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donate Today</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;400&display=swap">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -18,8 +21,9 @@
             <div class="first-div">
                 <h1>Charity Is an Art of </h1>
                 <h1>soft Heart</h1>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
-            <a class="donate-now-button" href="#">Donate Now</a>
+                <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo
+                    populo animal noluisse, enim</p>
+                <a class="donate-now-button" href="#">Donate Now</a>
             </div>
         </div>
     </section>
@@ -27,7 +31,8 @@
     <section class="donate-section">
         <div class="donate-3">
             <h2 class="donate-today">Donate Today</h2>
-            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
         </div>
         <div class="funds-raise">
             <div class="fund-amount">1000Tk</div>
@@ -37,27 +42,42 @@
             <div class="fund-amount">5000tk</div>
         </div>
         <div class="donate-3">
-            <p>Donate other Amount</p> <br> <br>
+            <input type="number" placeholder="Other Amount(Tk)">
+             <br> <br>
             <a class="donate-now-button" href="#">Donate Now</a>
         </div>
     </section>
-    
+
 
     <!--Donate plan Start-->
-    <section class="plan-section">
+     <section class="plan-section">
         <div>
             <h2 class="donate-today">Our Donate Plan</h2>
-        <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal noluisse, enim</p>
+            <p>Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo
+                animal noluisse, enim</p>
 
         </div>
         <div class="plan-category">
-            <div class="one-third">
-                <img src="images/" alt="">
+            <div class="one-third first-part">
+                <img src="icons//food.png" alt=""> <br><br><br><br>
+                <h4>Food for a family</h4> <br>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
             </div>
-            <div class="one-third"></div>
-            <div class="one-third"></div>
+            <div class="one-third second-part"> 
+                <img src="icons/shelter.png" alt=""> <br><br><br><br>
+                <h4>Shelter for a family</h4>   <br>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
+            <div class="one-third third-part">
+                <img src="icons/Frame-1.png" alt=""> <br><br><br><br>
+                <h4>Education for a child</h4> <br>
+                <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit.</p>
+            </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- <section class="donate-section">
         <div class="donate-funds">
@@ -68,16 +88,25 @@
     </section> -->
 
     <!--Subscripton section-->
-    <!-- <section class="subscription-section">
+    <section class="subscription">
+        <h1>Get My Updates</h1>
+        <p>
+            Lorem ipsum dolor sit amet, usu cu esse possit referrentur, at eam falli <br> deterruisset. No duo populo animal
+            noluisse, enim
+        </p>
         <div>
-            <h2>Get My Updates</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem libero non provident dolore! <br>Qui animi suscipit cupiditate esse laborum, incidunt .</p>
+            <form class="frm">
+                <div><input type="email" placeholder="Email" /></div>
+                <div class="frm-button">Subscribe</div>
+            </form>
         </div>
-        <div class="subscribe-btn flex">
-            <input class="subscribe" type="text"placeholder="Email">
-            <button class="s-btn"><a href="">Subscrbe</a></button>
-        </div>
-    </section> -->
+    </section>
 </body>
+<footer>
+    <div class="footer-sectioin">
+        <span class="humble-text">Be Humble</span>
+    <p class="gonna">I gonna do it</p>
+    </div>
+</footer>
 
 </html>
